--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <header class="topbar">
     <div class="brand">
       <div class="title">FIN 산출자료 (Web)</div>
-      <div class="sub">엑셀 탭 구조 그대로 · 자동환산/할증 · 자동집계 · 로컬저장</div>
+      <div class="sub">산출식 → 물량 자동계산 · 자동환산/할증 · 자동집계 · 로컬저장</div>
+      <div class="hint">단축키: <b>F5</b> 코드 선택창 · 코드 더블클릭 선택 · <b>F10</b> 현재 탭에 추가</div>
     </div>
 
     <div class="actions">
@@ -29,8 +30,49 @@
     <section id="view"></section>
   </main>
 
+  <!-- ✅ F5 코드 선택 오버레이 -->
+  <div id="codeOverlay" class="overlay hidden" aria-hidden="true">
+    <div class="overlay-card">
+      <div class="overlay-head">
+        <div>
+          <div class="overlay-title">0.코드(Code) 선택</div>
+          <div class="overlay-sub">더블클릭으로 선택 → F10으로 현재 탭에 추가</div>
+        </div>
+        <button id="btnCloseOverlay" class="smallbtn">닫기(Esc)</button>
+      </div>
+
+      <div class="overlay-tools">
+        <input id="codeSearch" class="cell" placeholder="검색: 코드 / 품명 / 규격" />
+        <div class="overlay-status" id="overlayStatus"></div>
+      </div>
+
+      <div class="table-wrap" style="max-height:60vh; overflow:auto;">
+        <table>
+          <thead>
+            <tr>
+              <th style="min-width:160px;">코드</th>
+              <th style="min-width:220px;">품명</th>
+              <th style="min-width:220px;">규격</th>
+              <th style="min-width:90px;">단위</th>
+              <th style="min-width:110px;">할증(%)</th>
+              <th style="min-width:120px;">환산단위</th>
+              <th style="min-width:140px;">환산계수</th>
+              <th style="min-width:220px;">비고</th>
+            </tr>
+          </thead>
+          <tbody id="codeOverlayBody"></tbody>
+        </table>
+      </div>
+
+      <div class="overlay-foot">
+        <div class="badge" id="selectedBadge">선택: 없음</div>
+        <button id="btnInsertF10" class="btn">F10: 현재 탭에 추가</button>
+      </div>
+    </div>
+  </div>
+
   <footer class="footer">
-    <div>※ 엑셀 로직 반영: 철골/부자재 집계는 “할증후수량”, 동바리는 “물량(Value)” 합계 기준</div>
+    <div>※ 철골/부자재 집계: “할증후수량” 합계 · 동바리 집계: “물량(Value)” 합계(엑셀 로직 유지)</div>
   </footer>
 
   <script src="app.js"></script>
