--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <div class="title">FIN 산출자료 (Web)</div>
       <div class="sub">산출식 → 물량 자동계산 · 자동환산/할증 · 자동집계 · 로컬저장</div>
       <div class="hint">
-        단축키: <b>Ctrl+K</b> 코드 선택창 · 더블클릭 선택 · <b>Ctrl+Enter</b> 현재 탭에 추가 · <b>Esc</b> 닫기
+        단축키: <b>Alt+C</b> 코드 선택창 · 더블클릭 선택 · <b>Alt+I</b> 현재 탭에 추가 · <b>Esc</b> 닫기
       </div>
     </div>
 
     <div class="actions">
-      <button id="btnOpenPicker" class="btn">코드 선택 (Ctrl+K)</button>
+      <button id="btnOpenPicker" class="btn">코드 선택 (Alt+C)</button>
       <button id="btnExport" class="btn">내보내기(JSON)</button>
       <label class="btn ghost">
         가져오기(JSON)
@@ -39,7 +39,7 @@
       <div class="overlay-head">
         <div>
           <div class="overlay-title">0.코드(Code) 선택</div>
-          <div class="overlay-sub">더블클릭으로 선택 → Ctrl+Enter로 현재 탭에 추가</div>
+          <div class="overlay-sub">더블클릭으로 선택 → Alt+I로 현재 탭에 추가</div>
         </div>
         <button id="btnCloseOverlay" class="smallbtn">닫기(Esc)</button>
       </div>
@@ -69,7 +69,7 @@
 
       <div class="overlay-foot">
         <div class="badge" id="selectedBadge">선택: 없음</div>
-        <button id="btnInsert" class="btn">추가 (Ctrl+Enter)</button>
+        <button id="btnInsert" class="btn">추가 (Alt+I)</button>
       </div>
     </div>
   </div>
