--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
   <footer class="footer">
     <div>※ 철골/부자재 집계: “할증후수량” 합계 · 동바리 집계: “물량(Value)” 합계</div>
   </footer>
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
   <script src="app.js"></script>
+  
 </body>
 </html>
