--- a/picker.html
+++ b/picker.html
@@ -144,13 +144,18 @@
         </table>
       </div>
 
-      <div class="foot">
-        <div class="badge" id="pickInfo">선택 0개</div>
-        <div class="badge" id="originInfo">대상: -</div>
-      </div>
-    </div>
-  </main>
+  <div class="foot">
+    <div class="badge" id="pickInfo">선택 0개</div>
+    <div class="badge" id="originInfo">대상: -</div>
+  </div>
+</div>
+</main>
 
-  <script src="picker.js"></script>
+<!-- ✅ SheetJS(XLSX) 먼저 로드 -->
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+
+<!-- ✅ 그 다음 picker 로직 -->
+<script src="picker.js"></script>
 </body>
 </html>
+
