--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!-- index.html (변경 없음 / 참고용 전체) -->
 <!doctype html>
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FIN 산출자료 (Web)</title>
-<link rel="stylesheet" href="styles.css?v=13">
+  <link rel="stylesheet" href="styles.css?v=13">
 </head>
 <body>
   <header class="topbar">
@@ -36,9 +37,8 @@
   <footer class="footer">
     <div>※ 철골/부자재 집계: “할증후수량” 합계 · 동바리 집계: “물량(Value)” 합계</div>
   </footer>
-<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <script src="app.js?v=16"></script>
-  
 </body>
 </html>
